--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -5,302 +5,33 @@
 /*-- Header Structure --*/
 
 .header {
-    overflow-x: hidden;
-    padding: .5rem 0 1.5rem;
+    background: $color-primary;
+    color: $color-light;
+    padding: 1rem 0;
 
     @include bp-md {
-        overflow: visible;
-        padding: .5rem 0 2.5rem;
+        padding: 1.5rem 0;
     }
-
-    @include bp-lg {
-        padding: .5rem 0 3rem;
-    }
-}
-
-.header--home {
-    .header__content {
-        padding: 2rem 0;
-
-        @include bp-md {
-            padding: 3rem 0 4rem;
-        }
-
-        @include bp-lg {
-            padding: 4rem 0 6rem;
-        }
-    }
-
-    .header__title {
-        font-size: 2.75rem;
-
-        @include bp-md {
-            font-size: 4rem;
-        }
-
-        @include bp-lg {
-            font-size: 4rem;
-        }
-
-        &::before {
-            top: 1.7125rem;
-
-            @include bp-md {
-                top: 2.4625rem;
-            }
-
-            @include bp-lg {
-                top: 2.4625rem;
-            }
-        }
-
-        &::after {
-            bottom: 1.25rem;
-
-            @include bp-md {
-                bottom: 1.85rem;
-            }
-
-            @include bp-lg {
-                bottom: 1.85rem;
-            }
-        }
-    }
-}
-
-.header--clean {
-    .header__big-text {
-        @include bp-md {
-            display: none;
-        }
-    }
-
-    .header__content {
-        text-align: center;
-    }
-
-    .header__title {
-        &::before {
-            left: 0;
-            transform: none;
-            width: 100%;
-
-            @include bp-md {
-                left: 0;
-            }
-        }
-
-        &::after {
-            display: none;
-        }
-
-        span {
-            padding: 0 2rem;
-        }
-    }
-
-    .header__intro {
-        color: $text-dark;
-        margin: 1.5rem auto 0;
-
-        @include bp-md {
-            font-size: 1.1rem;
-        }
-
-        a {
-            border-bottom: .0625rem solid rgba($color-dark, .25);
-            color: $text-dark;
-            font-weight: bold;
-            padding-bottom: .125rem;
-            @include transition(border-bottom color);
-
-            &:hover,
-            &:focus {
-                border-bottom-color: currentColor;
-                color: $text-primary-lighter;
-            }
-        }
-    }
-}
-
-.header--styled {
-    position: relative;
-
-    &::before {
-        background: url('../img/hs-mark.svg') center right no-repeat;
-        background-size: 60%;
-        content: '';
-        display: none;
-        height: 100%;
-        width: 100%;
-        opacity: .05;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: scale(1.25);
-        @include z-index(-5);
-
-        @include bp-md {
-            background-size: 55%;
-            display: block;
-        }
-
-        @include bp-lg {
-            background-size: 50%;
-            transform: scale(1.2);
-        }
-
-        @include bp-xl {
-            background-size: 40%;
-            transform: scale(1.2) translateX(-10%);
-        }
-    }
-
-    .header__big-text {
-        color: $text-dark;
-        display: none;
-        opacity: .05;
-        overflow: visible;
-        text-orientation: mixed;
-        top: auto;
-        right: auto;
-        bottom: 0;
-        left: 0;
-        writing-mode: horizontal-tb;
-        @include z-index(-5);
-
-        @include bp-md {
-            display: block;
-            transform: scale(1.25) translate(3rem, 90%);
-        }
-
-        @include bp-lg {
-            right: auto;
-            transform: scale(1.1) translate(2rem, 85%);
-        }
-
-        @include bp-xl {
-            right: auto;
-            transform: scale(1) translate(-1rem, 85%);
-        }
-    }
-}
-
-.header--styled-alt {
-    &::before {
-        background: url('../img/hs-mark.svg') center right no-repeat;
-        background-size: 60%;
-        content: '';
-        display: none;
-        height: 100%;
-        width: 100%;
-        opacity: .05;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: scale(1.25);
-        @include z-index(-5);
-
-        @include bp-md {
-            background-size: 55%;
-            display: block;
-        }
-
-        @include bp-lg {
-            background-size: 50%;
-            transform: scale(1.2);
-        }
-
-        @include bp-xl {
-            background-size: 40%;
-            transform: scale(1.2) translateX(-10%);
-        }
-    }
-
-    .header__intro {
-        color: $text-dark;
-        width: 100%;
-
-        @include bp-md {
-            font-size: 1.1rem;
-            width: 100%;
-        }
-
-        a {
-            border-bottom: .0625rem solid rgba($color-dark, .25);
-            color: $text-dark;
-            font-weight: bold;
-            padding-bottom: .125rem;
-            @include transition(border-bottom color);
-
-            &:hover,
-            &:focus {
-                color: $text-primary-lighter;
-                border-bottom-color: currentColor;
-            }
-        }
-    }
-}
-
-.header__row-container {
-    position: relative;
 }
 
 .header__inner {
-    align-content: flex-end;
+    align-items: center;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 1.5rem 0;
-    position: relative;
-
-    @include bp-sm {
-        padding: 2rem 0;
-    }
+    justify-content: center;
 
     @include bp-md {
-        position: static;
-    }
-
-    @include bp-lg {
-        flex-wrap: nowrap;
+        justify-content: space-between;
     }
 }
 
-.header__inner__left {
-    @include bp-md {
-        margin-bottom: 1.5rem;
-        width: 100%;
-    }
-
-    @include bp-lg {
-        align-items: center;
-        display: flex;
-        margin-bottom: 0;
-        width: auto;
-    }
-}
-
-.header__inner__right {
-    @include bp-md {
-        align-items: center;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-end;
-    }
-}
-
-/*-- Header Logo --*/
+/*-- Header > Branding --*/
 
 .header__brand {
-    width: 12rem;
-
-    @include bp-sm {
-        width: 14rem;
-    }
+    position: relative;
+    width: 6rem;
 
     @include bp-md {
-        width: 16rem;
+        width: 8rem;
     }
 
     a {
@@ -312,208 +43,5 @@
     svg {
         height: auto;
         width: 100%;
-    }
-}
-
-/*-- Header Content --*/
-
-.header__content {
-    padding: 1.5rem 0;
-
-    @include bp-md {
-        padding: 2.5rem 0;
-    }
-
-    @include bp-lg {
-        padding: 3.5rem 0;
-    }
-}
-
-.header__pretitle {
-    display: block;
-    font-family: $font-family-heading;
-    font-size: 1.1rem;
-    margin-bottom: .5rem;
-}
-
-.header__title,
-.header__intro {
-    color: $text-primary;
-}
-
-.header__title {
-    font-size: 2rem;
-    position: relative;
-
-    @include bp-md {
-        font-size: 2.25rem;
-    }
-
-    @include bp-lg {
-        font-size: 3rem;
-    }
-
-    &::before,
-    &::after {
-        background: $color-primary;
-        content: '';
-        height: .125rem;
-        position: absolute;
-        @include z-index(1);
-    }
-
-    &::before {
-        top: 1.2625rem;
-        left: -1rem;
-        width: 150vh;
-        transform: translateX(-100%);
-
-        @include bp-md {
-            top: 1.4125rem;
-            left: -1.5rem;
-        }
-
-        @include bp-lg {
-            top: 1.8625rem;
-        }
-    }
-
-    &::after {
-        bottom: .9rem;
-        left: 20%;
-        width: 150vw;
-
-        @include bp-md {
-            bottom: 1.2rem;
-            width: 95%;
-        }
-
-        @include bp-lg {
-            bottom: 1.5rem;
-        }
-    }
-
-    span {
-        background: $color-light;
-        padding-right: 2rem;
-        position: relative;
-        @include z-index(2);
-    }
-}
-
-.header__intro {
-    margin-top: 1.5rem;
-    width: 90%;
-
-    @include bp-md {
-        width: 80%;
-    }
-
-    p {
-        &:last-of-type {
-            margin-bottom: 0;
-        }
-    }
-}
-
-.header__cover {
-    display: none;
-    height: 100%;
-    width: 100%;
-
-    @include bp-md {
-        display: block;
-    }
-}
-
-.header__big-text {
-    color: $text-primary-darker;
-    display: none;
-    font-family: $font-family-heading;
-    font-weight: bold;
-    line-height: 0;
-    opacity: .7;
-    overflow: hidden;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    right: -2rem;
-    text-orientation: sideways;
-    text-transform: uppercase;
-    user-select: none;
-    white-space: nowrap;
-    writing-mode: vertical-rl;
-    @include z-index(10);
-
-    span {
-        font-size: 7rem;
-        line-height: .8;
-        vertical-align: top;
-    }
-
-    @include bp-md {
-        display: block;
-    }
-
-    @include bp-lg {
-        right: -1rem;
-
-        span {
-            font-size: 10rem;
-        }
-    }
-
-    @include bp-xl {
-        right: -4rem;
-
-        span {
-            font-size: 12rem;
-        }
-    }
-}
-
-.header__link {
-    margin-top: 1.5rem;
-    padding: .75rem 0;
-    width: 100%;
-}
-
-.header__link-list-nav {
-    font-family: $font-family-heading;
-    margin-top: 1.5rem;
-    width: 90%;
-
-    @include bp-md {
-        width: 80%;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    li {
-        border-bottom: .0625rem solid rgba($color-gray-lighter, .5);
-        display: block;
-        width: 100%;
-        @include transition(border-bottom);
-
-        &:hover,
-        &:focus {
-            border-bottom-color: $color-primary-lighter;
-        }
-    }
-
-    a {
-        border: none;
-        color: $text-dark;
-        display: block;
-        font-weight: normal;
-        padding: .5rem 0;
-
-        &:hover,
-        &:focus {
-            color: $text-primary-lighter;
-        }
     }
 }
