--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -11,7 +11,7 @@ $color-secondary: #1A1A1A;
 $color-accent-green: #0FAC94;
 
 $color-light: #FDFDFD;
-$color-dark: $color-secondary;
+$color-dark: #242424;
 $color-gray: #F0F0F0;
 
 // Fonts
@@ -23,10 +23,10 @@ Roboto,
 Arial,
 sans-serif;
 
-$font-family-body: 'Open Sans',
+$font-family-body: 'PT Sans',
 $font-family-base;
 
-$font-family-heading: 'Galano Grotesque',
+$font-family-heading: 'Titillium Web',
 $font-family-body;
 
 /*-- Implicit Variables -- No need to edit. --*/
