--- a/src/assets/css/controls/_components.scss
+++ b/src/assets/css/controls/_components.scss
@@ -8,12 +8,12 @@
 @import '../components/base';
 
 // Import Standard Components
-@import '../components/buttons';
-@import '../components/footer';
+/* @import '../components/buttons';
+@import '../components/footer'; */
 @import '../components/header';
-@import '../components/inputs';
-@import '../components/layout';
 @import '../components/nav';
+/*@import '../components/inputs';
+@import '../components/layout';
 
 // Import Reusable Component Widgets
 
@@ -26,4 +26,4 @@
 @import '../components/wp/posts';
 
 // IE Compatibility
-@import '../components/ie';
+@import '../components/ie'; */
