--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -55,18 +55,8 @@
     }
 }
 
-.section--full {
-    &>.container-fluid {
-        padding: 0;
-
-        &>.row {
-            margin-left: 0;
-            margin-right: 0;
-
-            &>[class*=col-] {
-                padding-left: 0;
-                padding-right: 0;
-            }
-        }
-    }
+.section__header {
+    text-align: center;
+    width: 60%;
+    margin: 0 auto 2rem;
 }
