--- a/src/assets/css/components/_nav.scss
+++ b/src/assets/css/components/_nav.scss
@@ -51,7 +51,7 @@
 
         .nav__link {
             background: $color-primary-darker;
-            border-radius: .25rem;
+            border-radius: .35rem;
             display: inline-block;
             padding: .75rem 1.25rem;
             @include transition(background color box-shadow);
@@ -60,7 +60,7 @@
             &:focus {
                 // background: $color-primary-lighter;
                 background: $color-light;
-                color: $text-primary-darker;
+                color: $text-primary-lighter;
                 box-shadow: .0625rem .0625rem .1875rem rgba($color-dark, .25);
             }
 
