--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -12,7 +12,7 @@ $color-accent-green: #0FAC94;
 
 $color-light: #FDFDFD;
 $color-dark: #525252;
-$color-gray: #F0F0F0;
+$color-gray: #FBFBFB;
 
 // Fonts
 $font-family-base: -apple-system,
