--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -17,6 +17,8 @@
     }
 }
 
+/*-- Sizing --*/
+
 .section--sm {
     padding: 0;
 
@@ -55,8 +57,71 @@
     }
 }
 
+/*-- Coloring --*/
+
+.section--default {
+    background: $color-light;
+}
+
+.section--alt {
+    background: darken($color-gray, 1%);
+}
+
+/*-- Content --*/
+
 .section__header {
     text-align: center;
-    width: 60%;
-    margin: 0 auto 2rem;
+    width: 90%;
+    margin: 0 auto 3rem;
+
+    @include bp-md {
+        width: 80%;
+    }
+
+    @include bp-lg {
+        width: 70%;
+    }
+
+    @include bp-xl {
+        width: 60%;
+    }
+}
+
+.section__title {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+
+    @include bp-sm {
+        font-size: 1.5rem;
+    }
+
+    @include bp-md {
+        font-size: 1.75rem;
+        margin-bottom: 1.5rem;
+    }
+
+    @include bp-lg {
+        font-size: 2rem;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.section__intro {
+    margin: 0 auto;
+    width: 80%;
+
+    @include bp-md {
+        width: 70%;
+    }
+
+    @include bp-lg {
+        width: 60%;
+    }
+
+    @include bp-xl {
+        width: 50%;
+    }
 }
