--- a/src/assets/css/components/widgets/_hero.scss
+++ b/src/assets/css/components/widgets/_hero.scss
@@ -2,12 +2,25 @@
     #COMPONENT-HERO
 \*------------------------------------*/
 
+/*-- Structure --*/
+
 .component-hero {
-    align-items: center;
-    background: $color-gray-lighter;
-    display: flex;
-    margin: 2rem 0;
-    min-height: 75vh;
+    padding: 2rem 0;
+
+    @include bp-md {
+        align-items: center;
+        display: flex;
+        padding: 3rem 0;
+        min-height: 75vh;
+    }
+
+    @include bp-lg {
+        padding: 5rem 0;
+    }
+
+    @include bp-xl {
+        padding: 9rem 0;
+    }
 }
 
 .component-hero__container {
@@ -21,25 +34,68 @@
 }
 
 .component-hero__inner {
-    width: 48%;
+    @include bp-md {
+        width: 56%;
+    }
+
+    @include bp-lg {
+        width: 48%;
+    }
 }
 
+/*-- Content --*/
+
 .component-hero__title {
-    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+
+    @include bp-sm {
+        font-size: 2rem;
+    }
+
+    @include bp-md {
+        font-size: 2.25rem;
+        margin-bottom: 2rem;
+    }
+
+    @include bp-lg {
+        font-size: 2.5rem;
+    }
 }
 
 .component-hero__intro {
-    font-size: 1.25rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
+
+    @include bp-sm {
+        font-size: 1.1rem;
+    }
+
+    @include bp-md {
+        font-size: 1.25rem;
+        margin-bottom: 2rem;
+    }
 }
 
 .component-hero__action {
-    align-items: center;
-    display: flex;
+    @include bp-md {
+        align-items: center;
+        display: flex;
+    }
 }
 
 .component-hero__action__item {
-    margin-right: 1rem;
+    margin-top: .5rem;
+    width: 100%;
+
+    @include bp-md {
+        margin-top: 0;
+        margin-right: 1rem;
+        width: auto;
+    }
+
+    &:first-child {
+        margin-top: 0;
+    }
 
     &:last-child {
         margin-right: 0;
@@ -47,11 +103,63 @@
 }
 
 .component-hero__art {
-    height: 75vh;
-    width: 50%;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+    height: 30vh;
+    width: 100%;
+    margin-bottom: 1.5rem;
     user-select: none;
+
+    @include bp-md {
+        margin-bottom: 0;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        height: 50vh;
+        width: 40%;
+    }
+
+    @include bp-lg {
+        height: 75vh;
+        width: 50%;
+    }
+}
+
+.component-hero__payments {
+    align-items: center;
+    color: $text-dark;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    margin: 1.5rem 0 0;
+    padding: 0;
+
+    @include bp-md {
+        justify-content: flex-start;
+        margin: 2rem 0 0;
+    }
+}
+
+.component-hero__payments__title {
+    font-family: $font-family-heading;
+    font-weight: bold;
+    margin: 0 0 .5rem;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+
+    @include bp-md {
+        margin: 0 1rem 0 0;
+        text-align: left;
+        width: auto;
+    }
+}
+
+.component-hero__payments__item {
+    margin-right: 1rem;
+    opacity: .4;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
