--- a/src/assets/css/controls/_components.scss
+++ b/src/assets/css/controls/_components.scss
@@ -16,9 +16,11 @@
 
 // Import Reusable Component Widgets
 @import '../components/widgets/call-to-action';
+@import '../components/widgets/content';
 @import '../components/widgets/content-boxes';
 @import '../components/widgets/hero';
 @import '../components/widgets/split-content';
+@import '../components/widgets/stat-boxes';
 
 /*
 @import '../components/footer'; */
