--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -26,7 +26,7 @@ sans-serif;
 $font-family-body: 'PT Sans',
 $font-family-base;
 
-$font-family-heading: 'Titillium Web',
+$font-family-heading: 'PT Sans',
 $font-family-body;
 
 /*-- Implicit Variables -- No need to edit. --*/
