--- a/src/assets/css/components/widgets/_content-boxes.scss
+++ b/src/assets/css/components/widgets/_content-boxes.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0;
     padding: 2rem 1rem;
     text-align: center;
 
