--- a/src/assets/css/components/_buttons.scss
+++ b/src/assets/css/components/_buttons.scss
@@ -172,3 +172,12 @@
         color: $text-light;
     }
 }
+
+.btn--shadow {
+    box-shadow: 0 .5rem 1rem rgba($color-primary, .15);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0 1rem 1.5rem rgba($color-primary-lighter, .2);
+    }
+}
