--- a/src/assets/css/components/_inputs.scss
+++ b/src/assets/css/components/_inputs.scss
@@ -3,49 +3,34 @@
 \*------------------------------------*/
 
 .form {
-    padding: 1rem 0;
+    margin-bottom: 1rem;
 }
 
-.form--light {
-    .form-label {
-        color: $text-light;
-    }
-
-    .form-control {
-        background-color: transparent;
-        border-color: $color-light;
-        color: $text-light;
-
-        &:focus {
-            background-color: transparent;
-            border-color: $color-light;
-            color: $text-light;
-        }
-    }
-}
-
-.form-label {
-    cursor: pointer;
+.form__label {
     font-size: .9rem;
-    margin-bottom: .25rem;
+    margin-bottom: .5rem;
 }
 
-.form-control {
-    background-color: $color-light;
-    border: .125rem solid $color-dark;
-    border-radius: 0;
-    color: $text-dark-lighter;
+.form-control,
+.custom-select {
+    color: lighten($text-dark, 10%);
 
     &:focus {
         background-color: $color-light;
         border-color: $color-primary-lighter;
-        box-shadow: none;
+        box-shadow: 0 0 0 .2rem rgba($color-primary-lighter, .25);
         color: $text-dark;
         @include transition(all);
     }
 }
 
-.form-submit {
+.form__submit {
+    margin-top: 1.5rem;
     padding: 1rem 0;
     text-align: center;
+}
+
+.custom-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
