--- a/src/assets/css/components/_layout.scss
+++ b/src/assets/css/components/_layout.scss
@@ -4,16 +4,18 @@
 
 .section {
     margin: 0 auto;
-    padding: .25rem 0;
+    padding: 2.5rem 0;
 
-    @include bp-md {
-        padding: .5rem 0;
+    @include bp-sm {
+        padding: 3rem 0;
     }
 
-    &:last-child {
-        @include bp-md {
-            padding: .5rem 0;
-        }
+    @include bp-md {
+        padding: 3.5rem 0;
+    }
+
+    @include bp-lg {
+        padding: 4.5rem 0;
     }
 }
 
@@ -22,38 +24,32 @@
 .section--sm {
     padding: 0;
 
+    @include bp-sm {
+        padding: 0;
+    }
+
     @include bp-md {
         padding: 0;
     }
 
-    &:last-child {
-        @include bp-md {
-            padding: 0;
-        }
+    @include bp-lg {
+        padding: 0;
     }
 }
 
 .section--lg {
-    padding: 1rem 0;
+    padding: 3rem 0;
 
-    @include bp-md {
-        padding: 1.5rem 0;
-
-        &:last-child {
-            padding: 1.5rem 0;
-        }
+    @include bp-sm {
+        padding: 3.5rem 0;
     }
-}
-
-.section--xl {
-    padding: 1rem 0;
 
     @include bp-md {
         padding: 4rem 0;
+    }
 
-        &:last-child {
-            padding: 4rem 0;
-        }
+    @include bp-lg {
+        padding: 5rem 0;
     }
 }
 
