--- a/src/assets/css/components/_nav.scss
+++ b/src/assets/css/components/_nav.scss
@@ -20,8 +20,12 @@
 }
 
 .nav__item {
-    margin-right: 2rem;
+    margin-right: 1.25rem;
     margin-bottom: 0;
+
+    @include bp-xl {
+        margin-right: 2rem;
+    }
 
     &:last-child {
         margin-right: 0;
@@ -32,41 +36,74 @@
 
 // Main Navigation
 .nav--primary {
-    display: none;
+    display: flex;
     justify-content: space-between;
-
-    @include bp-lg {
-        display: flex;
-    }
 
     .nav__list {
         flex-wrap: nowrap;
     }
 
     .nav__item {
-        display: inline-block;
+        display: none;
+
+        @include bp-lg {
+            display: inline-block;
+        }
     }
 
     .nav__item--em {
-        margin-right: 1rem;
+        display: inline-block;
+        margin-right: 1.5rem;
+
+        @include bp-lg {
+            margin-right: 1rem;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
 
         .nav__link {
-            background: $color-primary-darker;
-            border-radius: .35rem;
             display: inline-block;
-            padding: .75rem 1.25rem;
             @include transition(background color box-shadow);
+
+            @include bp-lg {
+                background: $color-primary-darker;
+                border-radius: .35rem;
+                padding: .75rem 1.25rem;
+            }
 
             &:hover,
             &:focus {
-                // background: $color-primary-lighter;
-                background: $color-light;
-                color: $text-primary-lighter;
-                box-shadow: .0625rem .0625rem .1875rem rgba($color-dark, .25);
+                color: $color-light;
+
+                @include bp-lg {
+                    background: $color-light;
+                    box-shadow: .0625rem .0625rem .1875rem rgba($color-dark, .25);
+                    color: $text-primary-lighter;
+                }
             }
 
-            span {
-                margin-right: .25rem;
+            .nav__icon {
+                @include bp-lg {
+                    margin-right: .25rem;
+                }
+
+                svg {
+                    transform: scale(1.25);
+
+                    @include bp-lg {
+                        transform: scale(1);
+                    }
+                }
+            }
+
+            .nav__text {
+                display: none;
+
+                @include bp-lg {
+                    display: inline;
+                }
             }
         }
     }
@@ -80,5 +117,169 @@
         &:focus {
             color: $text-light;
         }
+    }
+}
+
+// Social Media Navigation
+.nav--social {
+    align-items: center;
+    justify-content: flex-start;
+
+    .nav__item {
+        flex: 1;
+        margin-right: 3rem;
+
+        a {
+            border: none;
+            font-weight: normal;
+            padding: 0;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+// Mobile Navigation
+.nav-mobile-toggle {
+    background: none;
+    border: 0;
+    color: rgba($text-light, .75);
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+    @include transition(all);
+
+    @include bp-lg {
+        display: none;
+    }
+
+    &:hover,
+    &:focus {
+        color: $text-light;
+        outline: 0;
+    }
+
+    svg {
+        transform: scale(1.25);
+    }
+}
+
+.nav--mobile {
+    -webkit-overflow-scrolling: touch;
+    backface-visibility: hidden;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    @include z-index(20);
+
+    @include bp-lg {
+        display: none;
+        visibility: hidden;
+    }
+}
+
+.nav--mobile--open {
+    visibility: visible;
+
+    @include bp-lg {
+        display: none;
+        visibility: hidden;
+    }
+
+    .nav--mobile__content {
+        height: 100vh;
+        opacity: 1;
+    }
+}
+
+.nav--mobile__content {
+    background: $color-primary;
+    color: $text-light;
+    height: 0;
+    opacity: 0;
+    padding: 1.5rem 0;
+    @include transition(all);
+}
+
+.nav--mobile__content__section {
+    padding: 1.5rem 0;
+
+    &:first-child {
+        padding-top: 0;
+    }
+}
+
+.nav--mobile__content__section--bordered {
+    border-top: .0625rem solid rgba($color-light, .2);
+    border-bottom: .0625rem solid rgba($color-light, .2);
+}
+
+.nav--mobile__content__section__title {
+    opacity: .75;
+}
+
+.nav--mobile__nav {
+    .nav__list {
+        display: block;
+    }
+
+    .nav__item {
+        font-size: 1.5rem;
+        margin: 0 0 1rem;
+
+        a {
+            color: $text-light;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .nav__item--em {
+        display: none;
+    }
+}
+
+.nav--mobile__social {
+    a {
+        border: none;
+        color: $text-light;
+        opacity: .5;
+        @include transition(all);
+
+        &:hover,
+        &:focus {
+            opacity: 1;
+        }
+    }
+}
+
+.nav--mobile__contact {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+        margin-bottom: 1rem;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    span {
+        display: inline-block;
+        opacity: .5;
+        margin-right: .5rem;
+        text-align: center;
+        width: 1.5rem;
     }
 }
